Added format date-time to spec. Fixed upload Actividades.
